Alguns tratamentos de erros feitos